kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: it-edu
  name: it-edu
spec:
  ports:
  - name: it-edu
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: it-edu
  type: ClusterIP
